--- a/WebContent/app/css/_adminMain.scss
+++ b/WebContent/app/css/_adminMain.scss
@@ -41,7 +41,7 @@
     margin: 1rem;
     height: max-content;
     flex: 1;
-    &_action{
+    &_action {
       display: flex;
       flex-flow: row wrap;
       justify-content: center;
@@ -51,53 +51,55 @@
   &__form {
     display: flex;
     flex-flow: row wrap;
-    &_wide{
+    &_wide {
       flex: none;
       width: 55%;
     }
   }
-  &__table{
+  &__table {
     width: 100%;
   }
 }
 @include breakpoint-down(medium) {
-    .main{
-        flex-flow: column wrap;
-        &__form,&__preview,&__form_wide{
-            flex: none;
-            width: calc(100% - 2rem);
-            margin: 0.5rem;
-        }
-        &__form{
-            flex-flow: column wrap;
-        }
-        .form_group {
-            width: 100%;
-            &_submit {
-                width: 100%;
-            }
-        }
-        &__preview{
-            tr{
-                width: max-content;
-            }
-            td {
-                 width: min-content;
-            }
-            overflow-x: scroll;
-            scrollbar-color: auto;
-            scrollbar-width: thin;
-            &::-webkit-scrollbar {
-                width: 0.5rem;
-                height: 0.5rem;
-            }
-            &::-webkit-scrollbar-track {
-                background: $darkBlue;
-            }
-            &::-webkit-scrollbar-thumb {
-                background: $lightPurple;
-                border-radius: 0.1rem;
-            }
-        }
+  .main {
+    flex-flow: column wrap;
+    &__form,
+    &__preview,
+    &__form_wide {
+      flex: none;
+      width: calc(100% - 2rem);
+      margin: 0.5rem;
     }
+    &__form {
+      flex-flow: column wrap;
+    }
+    .form_group {
+      width: 100%;
+      &_submit {
+        width: 100%;
+      }
+    }
+    &__preview {
+      tr {
+        width: max-content;
+      }
+      td {
+        width: min-content;
+      }
+      overflow-x: scroll;
+      scrollbar-color: auto;
+      scrollbar-width: thin;
+      &::-webkit-scrollbar {
+        width: 0.5rem;
+        height: 0.5rem;
+      }
+      &::-webkit-scrollbar-track {
+        background: $darkBlue;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: $lightPurple;
+        border-radius: 0.1rem;
+      }
+    }
+  }
 }
