--- a/WebContent/app/css/_mixins.scss
+++ b/WebContent/app/css/_mixins.scss
@@ -1,19 +1,26 @@
 //Breakpoints
-@media (min-width: 74em){
-
+@media (min-width: 74em) {
 }
 //640px, 1024px, 1400px
-$breakpoints-up: ("medium": "40em","large": "60em","xlarge": "87.5em");
+$breakpoints-up: (
+  "medium": "40em",
+  "large": "60em",
+  "xlarge": "87.5em",
+);
 //639px, 1023px, 1399px
-$breakpoints-down: ("small": "39.9375em", "medium": "59.9375em","large": "87.4375em");
+$breakpoints-down: (
+  "small": "39.9375em",
+  "medium": "59.9375em",
+  "large": "87.4375em",
+);
 
-@mixin breakpoint-up($size){
-    @media (min-width: map-get($breakpoints-up, $size)){
-        @content;
-    }
+@mixin breakpoint-up($size) {
+  @media (min-width: map-get($breakpoints-up, $size)) {
+    @content;
+  }
 }
-@mixin breakpoint-down($size){
-    @media (max-width: map-get($breakpoints-down, $size)){
-          @content;
-    }
+@mixin breakpoint-down($size) {
+  @media (max-width: map-get($breakpoints-down, $size)) {
+    @content;
+  }
 }
