--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -64,18 +64,18 @@
 }
 @-webkit-keyframes shiftGradient {
   from {
-    background: linear-gradient(90deg, #23049D, #AA2EE6);
+    background: linear-gradient(90deg, #23049d, #aa2ee6);
   }
   to {
-    background: linear-gradient(90deg, #AA2EE6, #23049D);
+    background: linear-gradient(90deg, #aa2ee6, #23049d);
   }
 }
 @keyframes shiftGradient {
   from {
-    background: linear-gradient(90deg, #23049D, #AA2EE6);
+    background: linear-gradient(90deg, #23049d, #aa2ee6);
   }
   to {
-    background: linear-gradient(90deg, #AA2EE6, #23049D);
+    background: linear-gradient(90deg, #aa2ee6, #23049d);
   }
 }
 @-webkit-keyframes reveal {
@@ -267,11 +267,15 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-a, a:visited, a:hover {
+a,
+a:visited,
+a:hover {
   text-decoration: none;
 }
 
@@ -308,25 +312,28 @@ body {
   align-items: center;
 }
 
-button, .button {
+button,
+.button {
   display: block;
   padding: 0.875rem 2.1875rem;
   border-radius: 50px;
   cursor: pointer;
   background-size: 200% auto;
-  background-image: linear-gradient(to right, #23049D 0%, #AA2EE6 50%, #23049D 100%);
+  background-image: linear-gradient(to right, #23049d 0%, #aa2ee6 50%, #23049d 100%);
   border: none;
   color: white;
   font-weight: 700;
   transition: all 0.3s ease-in-out;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
-button:hover, .button:hover {
+button:hover,
+.button:hover {
   transform: scale(1.025);
   background-position: right center;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
-button:active, .button:active {
+button:active,
+.button:active {
   transform: scale(0.95);
   background-position: left center;
 }
@@ -365,7 +372,7 @@ button:active, .button:active {
 }
 
 .edit-button {
-  background-image: linear-gradient(to right, #23049D 0%, #233E8B 50%, #23049D 100%);
+  background-image: linear-gradient(to right, #23049d 0%, #233e8b 50%, #23049d 100%);
 }
 
 .float-right-btn {
@@ -373,7 +380,7 @@ button:active, .button:active {
   top: 0.8rem;
   right: 1.2rem;
   box-shadow: none;
-  background-image: linear-gradient(90deg, #AA2EE6 0%, #FF79CD 50%, #AA2EE6 100%);
+  background-image: linear-gradient(90deg, #aa2ee6 0%, #ff79cd 50%, #aa2ee6 100%);
   font-size: 1rem;
   font-weight: normal;
   padding: 0.5rem 1rem;
@@ -398,7 +405,8 @@ button:active, .button:active {
   }
 }
 
-input, select {
+input,
+select {
   border: none;
   outline: 0;
   background-color: #fff;
@@ -407,7 +415,8 @@ input, select {
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
 }
-input:focus, select:focus {
+input:focus,
+select:focus {
   transform: scale(1.005);
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
@@ -420,6 +429,15 @@ input:focus, select:focus {
   background-repeat: no-repeat;
   background-size: 1.2rem;
   background-position: 1rem 1.2rem;
+}
+
+.user_id {
+  background-image: url(../../images/avatar.png);
+}
+
+.user_pass {
+  background-image: url(../../images/padlock.png);
+  margin-top: 1.2rem;
 }
 
 @media (max-width: 59.9375em) {
@@ -444,6 +462,7 @@ input:focus, select:focus {
   font-weight: normal;
   font-size: 2rem;
   line-height: 1.5;
+  text-align: center;
 }
 
 table {
@@ -453,7 +472,8 @@ table {
   width: 100%;
 }
 
-caption, .caption {
+caption,
+.caption {
   width: 100%;
   text-align: center;
   padding-bottom: 1rem;
@@ -461,7 +481,7 @@ caption, .caption {
 }
 
 thead {
-  background: linear-gradient(150deg, #23049D, #233E8B);
+  background: linear-gradient(150deg, #23049d, #233e8b);
   border-radius: 1rem;
 }
 
@@ -469,7 +489,8 @@ th {
   color: #fff;
 }
 
-th, td {
+th,
+td {
   text-align: center;
   padding: 0.5rem;
 }
@@ -494,7 +515,7 @@ tbody tr:nth-child(even) {
   position: fixed;
   left: 50%;
   transform: translate(-50%);
-  z-index: 999;
+  z-index: 9999;
   bottom: 30px;
   max-height: 70vh;
   overflow-y: hidden;
@@ -527,7 +548,7 @@ tbody tr:nth-child(even) {
   transform: translate(-50%);
   z-index: 99;
   width: 60vw;
-  height: 70vh;
+  height: 80vh;
   box-shadow: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
   background-color: #fff;
   border-radius: 1rem;
@@ -546,7 +567,7 @@ tbody tr:nth-child(even) {
 .overlaydiv .scrollable {
   width: 100%;
   position: static;
-  max-height: 52vh;
+  max-height: 65vh;
   overflow-y: scroll;
   scrollbar-color: auto;
   scrollbar-width: thin;
@@ -563,10 +584,10 @@ tbody tr:nth-child(even) {
   height: 0.5rem;
 }
 .overlaydiv .scrollable::-webkit-scrollbar-track {
-  background: #FF79CD;
+  background: #ff79cd;
 }
 .overlaydiv .scrollable::-webkit-scrollbar-thumb {
-  background: #AA2EE6;
+  background: #aa2ee6;
   border-radius: 0.1rem;
 }
 .overlaydiv .cross {
@@ -609,8 +630,8 @@ tbody tr:nth-child(even) {
   height: 2.5rem;
   font-size: 12px;
   background-color: transparent;
-  border-left: 0.23rem solid #23049D;
-  border-right: 0.23rem solid #AA2EE6;
+  border-left: 0.23rem solid #23049d;
+  border-right: 0.23rem solid #aa2ee6;
   border-top: 0.23rem solid transparent;
   border-bottom: 0.23rem solid transparent;
   border-radius: 100%;
@@ -633,13 +654,13 @@ tbody tr:nth-child(even) {
 }
 .checkmark_selected::before {
   background-color: transparent;
-  background: linear-gradient(45deg, #23049D, #AA2EE6);
+  background: linear-gradient(45deg, #23049d, #aa2ee6);
   -webkit-animation: tick-selected-stem ease-in 0.2s forwards;
           animation: tick-selected-stem ease-in 0.2s forwards;
 }
 .checkmark_selected::after {
   background-color: transparent;
-  background: linear-gradient(-45deg, #23049D, #AA2EE6);
+  background: linear-gradient(-45deg, #23049d, #aa2ee6);
   -webkit-animation: tick-selected-kick ease-in 0.1s forwards;
           animation: tick-selected-kick ease-in 0.1s forwards;
 }
@@ -649,7 +670,7 @@ tbody tr:nth-child(even) {
   position: absolute;
   width: 0.35rem;
   height: 1.5rem;
-  background-color: #FF79CD;
+  background-color: #ff79cd;
   left: 11px;
   bottom: 2px;
 }
@@ -659,7 +680,7 @@ tbody tr:nth-child(even) {
   position: absolute;
   width: 0.93rem;
   height: 0.35rem;
-  background-color: #FF79CD;
+  background-color: #ff79cd;
   left: 0.1rem;
   top: 1.53rem;
 }
@@ -743,14 +764,14 @@ tbody tr:nth-child(even) {
   color: black;
 }
 .header__logo_title_part {
-  color: #23049D;
+  color: #23049d;
 }
 .header__menu > span {
   display: block;
   width: 26px;
   height: 4px;
   border-radius: 2px;
-  background: linear-gradient(90deg, #23049D, #AA2EE6);
+  background: linear-gradient(90deg, #23049d, #aa2ee6);
   opacity: 1;
   transition: all 0.2s ease-in-out;
   transform-origin: 2px 2px;
@@ -769,14 +790,14 @@ tbody tr:nth-child(even) {
   margin-right: 32px;
 }
 .header__links a:hover {
-  color: #23049D;
+  color: #23049d;
 }
 .header__links a:hover::before {
   content: "";
   display: block;
   position: absolute;
   height: 4px;
-  background: linear-gradient(90deg, #23049D, #AA2EE6);
+  background: linear-gradient(90deg, #23049d, #aa2ee6);
   left: 0;
   right: 0;
   bottom: -10px;
@@ -803,7 +824,7 @@ tbody tr:nth-child(even) {
 }
 .header .overlay {
   display: block;
-  background-image: linear-gradient(#23049D 0%, #233E8B 50%, transparent 100%);
+  background-image: linear-gradient(#23049d 0%, #233e8b 50%, transparent 100%);
   position: fixed;
   top: 63px;
   left: 0;
@@ -847,7 +868,39 @@ tbody tr:nth-child(even) {
   transition: color 0.3s ease-in-out;
 }
 .header__overlay_menu a:hover {
-  color: #23049D;
+  color: #23049d;
+}
+.header .overlaydiv {
+  display: flex;
+  flex-flow: column wrap;
+}
+.header .overlaydiv .signup-form {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 85%;
+  margin: 0 auto;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  border-radius: 1rem;
+}
+.header .overlaydiv .signup-form .tab-selector {
+  width: 100%;
+  height: 20%;
+  background-color: #d7e3f5;
+  display: flex;
+}
+.header .overlaydiv .signup-form .tab-selector_signin, .header .overlaydiv .signup-form .tab-selector_signup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  height: 100%;
+  text-align: center;
+  padding: 1rem;
+}
+.header .overlaydiv .signup-form .signin,
+.header .overlaydiv .signup-form .signup {
+  width: 80%;
+  margin: 2rem auto;
 }
 
 .hero {
@@ -882,7 +935,7 @@ tbody tr:nth-child(even) {
   color: #222;
 }
 .hero__sugesstion a:hover {
-  color: #233E8B;
+  color: #233e8b;
 }
 
 @media (max-width: 59.9375em) {
